@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/synergy
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.57 2008/04/21 14:25:19 flameeyes Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.58 2009/05/15 08:00:10 solar Exp $
+
+  15 May 2009; <solar@gentoo.org> synergy-1.3.1.ebuild:
+  - keyword ~arm
 
   21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
   -synergy-1.2.4.ebuild, -synergy-1.2.7.ebuild, -synergy-1.2.8.ebuild:
